--- a/Frontend/menu.css
+++ b/Frontend/menu.css
@@ -4,6 +4,8 @@ html{
 height: 100%;
 
 }
+
+<!--
 @media only screen and (min-width: 0px) {
     body{
     
@@ -11,7 +13,7 @@ height: 100%;
         height: 100%;
         background-repeat: no-repeat;
         background-size:contain;
-        background-image:   url('Żółtek XL.png');
+        background-image:   url('Ż.png');
         }
 }
 @media only screen and (min-width: 650px){
@@ -23,7 +25,7 @@ height: 100%;
         background-size:contain,contain;
         
         background-position: left top,right top;
-        background-image:   url('Żółtek XL.png'),url('Bosak XL.png');
+        background-image:   url('Ż.png'),url('B.png');
         }
 }
 
@@ -36,10 +38,18 @@ height: 100%;
         background-size:contain,contain,contain;
         
         background-position: left top,center top,right top;
-        background-image:  url('Żółtek XL.png'), url('Bosak XL.png'),url('MORAWIECKI XL.png');
+        background-image:  url('Ż.png'), url('B.png'),url('M.png');
         }
 }
-
+-->
+body{
+    
+    margin-top: 2.5em;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-image:   url('bcgr.jpg');
+    }
 header{
 display: grid;
 
