--- a/Frontend/css/joinGame.css
+++ b/Frontend/css/joinGame.css
@@ -9,19 +9,45 @@ margin: 0;
 height: 100%;
 background-size: contain;
 background-repeat: no-repeat;
-background-image:  url('bcgr.jpg');
+background-image:  url('../img/bcgr.jpg');
 }
 
 header{
 text-align: center;
-font-size: 5em;
+font-size: 7em;
 font-family: 'Work Sans';
 color:rgba(60, 22, 104, 0.712);
 font-weight: bold;
 
 }
+.forms{
+    margin-top: 1em;
+    text-align: center;
+    align-items: center;
+}
+
+form{
+    font-family: 'Work Sans';
+    padding: 5px;
+    min-width: 15em;
+    max-width: 25em;
+    margin: 0 auto;
+    margin-bottom: 1em;
+    font-size: 4em;
+    font-weight: bold;
+    border:rgba(248, 228, 45, 0.753);
+    border-radius: 10px;
+    color: rgba(60, 22, 104, 0.712);
+    
+}
+input{
+    font-size: 0.75em;
+    color:rgba(60, 22, 104, 0.712);
+    border-color:rgba(0, 0, 0, 0.623);
+    background-color:rgba(18, 11, 83, 0.233);
+}
 .buttons{
-    margin-top: 12em;
+    margin-top: 2em;
     text-align: center;
     align-items: center;
 }
