--- a/Frontend/css/menu.css
+++ b/Frontend/css/menu.css
@@ -13,7 +13,7 @@ height: 100%;
         height: 100%;
         background-repeat: no-repeat;
         background-size:contain;
-        background-image:   url('Ż.png');
+        background-image:   url('../img/Ż.png');
         }
 }
 @media only screen and (min-width: 650px){
@@ -25,7 +25,7 @@ height: 100%;
         background-size:contain,contain;
         
         background-position: left top,right top;
-        background-image:   url('Ż.png'),url('B.png');
+        background-image:   url('../img/Ż.png'),url('../img/B.png');
         }
 }
 
@@ -38,7 +38,7 @@ height: 100%;
         background-size:contain,contain,contain;
         
         background-position: left top,center top,right top;
-        background-image:  url('Ż.png'), url('B.png'),url('M.png');
+        background-image:  url('../img/Ż.png'), url('../img/B.png'),url('../img/M.png');
         }
 }
 -->
@@ -48,7 +48,7 @@ body{
     height: 100%;
     background-repeat: no-repeat;
     background-size:contain;
-    background-image:   url('bcgr.jpg');
+    background-image:   url('../img/bcgr.jpg');
     }
 header{
 display: grid;
