--- a/Frontend/App/src/css/yatta.css
+++ b/Frontend/App/src/css/yatta.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 
-chat{
+.map{
 min-height: 10em;
 min-width: 10em;
 }
