Commiting css changes

--- a/Frontend/App/src/css/menu.css
+++ b/Frontend/App/src/css/menu.css
@@ -41,12 +41,14 @@ font-weight: bold;
     display:flex;
     min-height: 10em;
     min-width: 10em;
+    height: 100%;
     width:100%;
     }
 canvas{
 width:70%;
+height: 1048px;
 }
 .chat{
+    height: 1048px;
     width:30%;
-
-}
+ }
