Row row row your table in character Creator

--- a/Frontend/App/src/css/hostGame.css
+++ b/Frontend/App/src/css/hostGame.css
@@ -93,7 +93,7 @@ button{
         font-size: 0.75em;
         color:#bfcde0;
         border-color:rgba(0, 0, 0, 0.623);
-        background-color:rgba(18, 11, 83, 0.233);
+        background-color:#03030357;
     
     }
     .hostForm{
