--- a/Frontend/App/src/css/creator.css
+++ b/Frontend/App/src/css/creator.css
@@ -1,10 +1,97 @@
 
+.creatorTable{
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+    display: flex;
+    background-color:#bfcde050;
+    min-height: 90vh;
+    min-width: 10vm;
+}
+.creatorMenu{
+    height: 100vh;
+    width: 20vw;
+    background-color:#bfcde098;
+    border:1px solid;
+
+    
+}
+
 .currChars{
-    display: block;
+    
+    width: 20vw;
+    background-color:#ff000098;
+    border:1px solid;
 }
 .currEq{
-    display: block;
+    width: 20vw;
+    background-color:#15ff0098;
+    border:1px solid;
 }
-.creatorTable{
-    display: flex;
+.currAb{
+    width: 20vw;
+    border:1px solid;
+    background-color:#bb005798;
+}
+.currDesc{
+    border:1px solid;
+    width: 20vw;
+    background-color:#bfcde098;
+
+}
+.tabTitle{
+    width: 20vw;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    background-color:#7b838f98;
+    color: #251e3b;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+}
+
+.tabBut{
+    background-color:#5d5d81;
+    border-radius: 100px;
+    width:80%;
+    font-size: 1.2em;
+    height:2.5em;
+    font-weight: bold;
+    color: #bfcde0;
+    display: flow-root;
+    text-align:center;
+}
+.jTitle{
+    height: 10vh;
+    font-size: 1.75em;
+    font-weight: bold;
+    text-align: center;
+}
+.tabInput{
+    background-color:#5d5d816c;
+    width: 100%;
+    font-size: 1.2em;
+    height: 2em;
+    resize: none;
+}
+.descInput{
+    background-color:#5d5d816c;
+    width: 100%;
+    resize: none;
+    height: 6em;
+}
+.backBut{
+    width:80%;
+    color: #bfcde0;
+    font-size: 1.5em;
+    display:flow-root;
+    font-weight: bold;
+    text-align: center;
+    background-color:#5d5d81;
+}
+.creatorDiv{
+    min-height:100vh;
+
+}
+.creatorHeader{
+    height: 10vh;
 }
