--- a/Frontend/App/src/css/creator.css
+++ b/Frontend/App/src/css/creator.css
@@ -60,7 +60,7 @@
     display: flow-root;
     text-align:center;
 }
-.jTitle{
+.tTitle{
     height: 10vh;
     font-size: 1.75em;
     font-weight: bold;
