--- a/Frontend/App/src/css/joinGame.css
+++ b/Frontend/App/src/css/joinGame.css
@@ -29,7 +29,7 @@ font-weight: bold;
     font-size: 0.75em;
     color:#bfcde0;
     border-color:rgba(0, 0, 0, 0.623);
-    background-color:#03030357;
+    background-color:#03030391;
 
 }
 .joinForm{
@@ -48,7 +48,7 @@ font-weight: bold;
 .jTitle{
     
     font-family: 'Work Sans';
-    
+    font-weight: bold;
     color:#251e3b;
 
 }
