--- a/Frontend/App/src/css/popups.css
+++ b/Frontend/App/src/css/popups.css
@@ -11,13 +11,14 @@
   }
   .popup_inner {
     position: absolute;
-    left: 25%;
-    right: 25%;
-    top: 25%;
-    bottom: 25%;
+    left: 35%;
+    right: 35%;
+    top: 15%;
+    bottom: 15%;
     margin: auto;
-    background: white;
-    color: black;
+    background-color:#bfcde098;
+    border:1px solid;
+    border-color:#251e3b;
   }
   .text_input {
     color: black;
@@ -26,11 +27,40 @@
     color: black;
   }
   .image_list{
-
+    padding: 10px;
+    height:85%
+  }
+  .image_line{
+    margin-bottom: 5px;
+    font-size: 15;
+    width:100%;
+    display: inline-block;
+  }
+  .image_line_choosen{
+    border: black solid 1px;
+    display: inline-block;
   }
   .image_box{
-
+    float: left;
   }
-  .image_box_choosen{
-    border: black solid 1px;
+  .image_name_span{
+    float:left;
+    color: black;
+    line-height: 35px;
+    margin-left: 10px;
+  }
+  .bottom_bar {
+    margin: auto;
+    display: inline;
+  }
+  .pop_button{
+    width:100%;
+    height:5%;
+    margin: auto;
+    background-color:#5d5d81;
+    border-radius: 5px;
+    color: #bfcde0;
+  }
+  .pop_button:hover{
+    border:#bfcde0 1px solid;
   }
