--- a/Frontend/App/src/css/tables.css
+++ b/Frontend/App/src/css/tables.css
@@ -7,6 +7,8 @@
 }
 
 .colOne{
+    overflow-y:auto;
+    overflow-x:hidden;
     display: block;
     width: 100%;
     height: 100%;
@@ -16,6 +18,8 @@
     padding: 5px;
 }
 .colTwo{
+    overflow-y:auto;
+    overflow-x:hidden;
     display: block;
     width: 100%;
     height: 100%;
@@ -25,6 +29,8 @@
     padding: 5px;
 }
 .colThree{
+    overflow-y:auto;
+    overflow-x:hidden;
     display: block;
     width: 100%;
     height: 100%;
@@ -34,6 +40,8 @@
     padding: 5px;
 }
 .colFour{
+    overflow-y:auto;
+    overflow-x:hidden;
     display: block;
     width: 100%;
     height: 100%;
