--- a/Frontend/App/src/css/charSheets.css
+++ b/Frontend/App/src/css/charSheets.css
@@ -13,11 +13,11 @@ td{
 .e{
     display: block;
     min-width: 100%;
-    margin: 2px;
+    margin: 0.2vh;
     text-align: center;
     height: fit-content;
     background-color: rgba(0, 0, 255, 0.411);
-    font-size:large;
+    font-size:3vh;
     font-family: 'Work Sans';
     font:bolder;
 }
