--- a/Frontend/App/src/css/chat.scss
+++ b/Frontend/App/src/css/chat.scss
@@ -27,10 +27,10 @@
   }
 }
 .chat {
-  width: 13em;
+  min-width: 30vw;
   padding: 1rem;
   justify-content: space-between;
-  height: 68em;
+  height: 100vh;
   flex-direction: column;
   background-color: $greyColor;
   .user-name {
@@ -94,7 +94,7 @@
   }
 
   .send {
-    height: 50px;
+    height: 5vh;
     display: flex;
     width: 100%;
     input {
@@ -112,8 +112,9 @@
 }
 .chatButtons{
   min-height: 2em;
+  height: 1.5vh;
   width: 100%;
-  font-size: 1.5em;
+  font-size: 2.5vh;
   border:#bfcde0;
   background-color:#5d5d81;
   border-radius: 10px;
